# cabinetry

./: setup.cfg  setup.py
.github/workflows/: CI.yml
