[metadata]
name = cabinetry
version = 0.0.2
description = design and steer profile likelihood fits
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexander-held/cabinetry
author = cabinetry developers
license = BSD 3-Clause
license_file = LICENSE
keywords = physics
project_urls =
    Source = https://github.com/alexander-held/cabinetry
    Tracker = https://github.com/alexander-held/cabinetry/issues

classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bdist_wheel]
universal = 1

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy
    pyyaml
    pyhf>=0.3.2
    iminuit

[options.packages.find]
where = src

[flake8]
max-line-length = 88
max-complexity = 18
